@@ -4,5 +4,6 @@ Markus Enzenberger <enz@users.sourceforge.net>
 
 Translators:
 
-Allan Nordhøy <epost@anotheragency.no> (Norsk bokmål)
+Allan Nordhøy <epost@anotheragency.no> (Norwegian Bokmål)
+Cherry <taikocherry@126.com> (Simplified Chinese)
 Markus Enzenberger <enz@users.sourceforge.net> (German, French)
